mysql_578.yml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
  - port: 3306
  selector:
    app: db
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - image: alexkonkin/mysql:5.7.8
        name: db
        ports:
        - containerPort: 3306
          name: db
        volumeMounts:
        - name: mysql-data-volume
          mountPath: /var/lib/mysql
        - name: mysql-init-volume
          mountPath: /docker-entrypoint-initdb.d/
      volumes:
      - name: mysql-data-volume
        persistentVolumeClaim:
          claimName: mysql-data-claim
      - name: mysql-init-volume
        persistentVolumeClaim:
          claimName: mysql-init-claim
