petclinic.yml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
spec:
  ports:
  - port: 8080
  selector:
    app: petclinic
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: petclinic
spec:
  selector:
    matchLabels:
      app: petclinic
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - image: alexkonkin/petclinic:latest
        name: petclinic
        ports:
        - containerPort: 8080
          name: petclinic
